--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,16 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.3.0",
+    "prisma": "^6.14.0",
+    "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@prisma/client": "^6.14.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "Prisma": "npm:prisma@^6.14.0"
   }
 }
