--- a/site-catalago/package.json
+++ b/site-catalago/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.11.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
     "react-medium-image-zoom": "^5.3.0",
     "react-router-dom": "^7.8.2",
@@ -24,6 +25,7 @@
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
